# MahoRAGa

./: .gitignore  CHANGELOG.md  README.md  feature.md  install_sse_autostart.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  uninstall_sse_autostart.sh
docs/: package-lock.json  package.json  vite.config.ts
docs/src/: App.tsx  index.css
docs/src/components/: Navbar.tsx  Sidebar.tsx
docs/src/pages/: ApiReference.tsx  Architecture.tsx  GettingStarted.tsx  Home.tsx
src/: db.py  embeddings.py  main.py  models.py  tools.py
tests/: conftest.py  test_artifacts.py  test_db.py  test_embeddings.py  test_main.py  test_performance.py  test_search_tuning.py  test_tools.py
viewer_api/: README.md  main.py  requirements.txt
viewer_ui/: README.md  index.html  package-lock.json  package.json
viewer_ui/src/: App.css  App.tsx  index.css
